  * Fixed enabling alpha in 32-bit BMP files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26662).
  * Added support for writing 16-bit TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26693).
  * Improved performance of dds:cluster-fit when OpenMP is enabled.

2014-12-04  6.9.0-1 Alexey Dolgavin <dolgavin.alexey@gmail...>
  * Fix ImageMagick crashes while read EXIF from TIFF.

2014-11-20  6.9.0-1 Glenn Randers-Pehrson <glennrp@image...>
  * Don't handle a "previous" image in the PNG or JNG decoder.
  * Don't override gamma with 1.0 when reading a grayscale PNG image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26576).
  * Update progress monitor for every PNG row instead of every pass (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26589).
  * Reject input PNG with dimensions larger than specified with -limit width
    and -limit height.

2014-11-20  6.9.0-1 Cristy  <quetzlzacatenango@image...>
  * Fix double free / invalid read when converting jpg to pdb (thanks to
    Hanno).
  * Maximum XWD image size is 64Kx64K (thanks to Hanno).
  * Maximum DPX number of elements is 8 (thanks to Hanno).
  * Transient problem with SVG (reference
      http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26587).
  * Numerous buffer overflow fixes (thanks to Gynvael Coldwind and
    Mateusz Jurczyk of the Google Security Team).
  * Additional PNM sanity checks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26682).
  * The SetImageBias() biad value is no longer ignored (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25732).
  * Area crop now returns the expected number of tiles (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26701).
  * Respect TGA ColorMapIndex field (reference